@@ -275,20 +275,20 @@ void game_set_frag_limit( int limit )
 	cur_game->frag_limit = limit;
 }
 
-/* set wether to use convex paddle */
+/* set whether to use convex paddle */
 void game_set_convex_paddle( int convex )
 {
 	cur_game->paddle_is_convex = convex;
 }
 
-/* set wether balls are returned to a paddle by pressing fire.
+/* set whether balls are returned to a paddle by pressing fire.
  * the alternative is that they automatically return. */
 void game_set_ball_auto_return( int auto_return )
 {
 	cur_game->balls_return_by_click = !auto_return;
 }
 
-/* set wether balls are fired at random angle or wether the
+/* set whether balls are fired at random angle or whether the
  * left/right fire keys are used */
 void game_set_ball_random_angle( int random )
 {
@@ -318,7 +318,7 @@ void game_set_paddle_state( int id, int x, int y, int left_fire, int right_fire,
 }
 
 /* move objects, modify game data, store brick hits and collected extras.
- * return wether level has been finished and the id of the winning paddle
+ * return whether level has been finished and the id of the winning paddle
  * in network games. -1 is a draw. level_over and winner is saved in the
  * game struct. */
 void game_update( int ms )
