@@ -1,3 +1,5 @@
+- fixed spelling error: wether -> whether (2016/04/03 Colin Tuckley)
+
 2.6.5:
 - in kids mode brick regeneration is four times slower (2015/10/17 MS)
 - in kids mode bonuses last four times longer (2015/10/17 MS)
